--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -5,6 +5,7 @@ footer {
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  padding-top: 20px;
 }
 
 a {
